# Brainstorm

./: Cargo.toml  README.md  brainstorm  build.sh  gui.py  run-gui.sh  test.py
benches/: speed_benchmarks.rs
models/: brainstorm_accurate_eval_jit.pt  brainstorm_fast_eval_jit.pt  eval_params264k_norm_mse_0.122527_jit.pt
results/elo-fast-regression-cpu/20260225-204840/: games.jsonl  summary.json
results/elo-fast-regression-mps-probed/20260225-205011/: games.jsonl  summary.json
results/elo-fast-regression-mps/20260225-204840/: games.jsonl  summary.json
results/elo-fast/20260225-204439/: games.jsonl  summary.json
results/elo-fast/20260225-210151/: games.jsonl
results/elo-smoke/20260225-184909/: games.jsonl  summary.json
results/elo-speed-smoke/20260225-190949/: games.jsonl  summary.json
results/elo/20260225-185613/: games.jsonl  summary.json
results/elo/20260225-204422/: games.jsonl
scripts/: bench_uci.py  elo_openings.jsonl  estimate_elo.py  gui.py  strength_suite.py
src/: engine.rs  lib.rs  main.rs  search_algorithm.rs  utils.rs
tests/: test_elo_math.py  test_elo_script_smoke.py  test_time_control.py  test_uci_protocol.py
