[package]
name = "brainstorm"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pleco = "0.5.0"
tch = "0.17.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "speed_benchmarks"
harness = false
